# cooler_master_sdk

./: .gitignore  Cargo.toml  README.md  build.rs
src/: ffi.rs  lib.rs
src/CoolerMasterSdk_v28/: ReadMe.txt
src/CoolerMasterSdk_v28/SDK/x64/: SDKDLL.h
